--- a/EqualizeTeamRatings.html
+++ b/EqualizeTeamRatings.html
@@ -5,9 +5,7 @@
 <body>
 
 <h2>Equalize Team Ratings</h2>
-<p id="WrittenBy">Written by Bernhard Strasser ([o.p.]kanalratte).</p>
-<p id="Version">Version 0.1.</p>
-<p id="UseOrReuse">Feel free to use or reuse this html & javascript code.</p>
+<p id="WrittenBy">Written by Bernhard Strasser ([o.p.]kanalratte). Version 0.1. Feel free to use or reuse this html & javascript code.</p>
 
 
 <button type="button" onclick="CalcAndShowResults()">Start Calculation...</button>
@@ -16,11 +14,6 @@
 <table>
 </table>
 
-<p id="Output0">Result: </p>
-<p id="Output1"></p>
-
-
-
 <script>
 
 
@@ -28,7 +21,7 @@
 function CalcAndShowResults() {
 
 	
-	FilterOptions = {MaxRatingDiff:200, TeamA_WantedPlayers:[0, 2], TeamA_UnwantedPlayers:[], TeamB_WantedPlayers:[0], TeamB_UnwantedPlayers:[1], MaxShownMatches: 100};
+	FilterOptions = {MaxRatingDiff:200, TeamA_WantedPlayers:[0, 2], TeamA_UnwantedPlayers:[], TeamB_WantedPlayers:[], TeamB_UnwantedPlayers:[], MaxShownMatches: 100};
 	PartySize = 4;
 	//TeamA = {Names: ["fatman","Drinky","Martinzilla","kanalratte","Frankie","GuentherrDerRinge", "Dietrich"], Ratings: [2100, 1700, 1650, 1500, 1450, 1450, 1350], PlayerNo: [0, 1, 2, 3, 4, 5, 6]};
 	TeamA = {Names: ["fatman","Drinky","Martinzilla","kanalratte"], Ratings: [2100, 1700, 1650, 1500], PlayerNo: 4};
@@ -50,11 +43,19 @@ function CalcAndShowResults() {
 	FilteredMatches = FilterMatches(AllMatches,FilterOptions);
 	
 	// Create Human-Readable Matches
+	HumanReadableMatches = HumanizeMatches(FilteredMatches,TeamA,TeamB);
 
 
-	//document.write('<pre>' + JSON.stringify(CalcAllUniqueCombinations(["19", "21", "42", "23", "25", "28"], 4), 0, 4) + '</pre>');
-	document.getElementById("Output1").innerHTML = "Result: " + TeamA.Names[0];  
-	//console.table(values);
+	// Create output in form of table
+	
+	let table = document.querySelector("table");
+	generateTableHead(table, ["","","Team A","","","","","Team B","",""]);
+	generateTableHead(table, ["MatchId","Player 1","Player 2","Player 3","Player 4","Player 1","Player 2","Player 3","Player 4","Rating Diff (A-B)"]);
+    table.border = 3;
+    
+    generateTable(table,HumanReadableMatches);
+
+	
 }
 
 
@@ -97,6 +98,39 @@ function FilterMatches(AllMatches,FilterOptions) {
 	
 	return FilteredMatches;
 	
+}
+
+
+function HumanizeMatches(FilteredMatches,TeamA,TeamB){
+	
+	if(FilteredMatches.length == 0)
+	{
+		HumanReadableMatches = [];
+		return HumanReadableMatches;
+	}
+	
+	PartySize = (FilteredMatches[0].length-2)/2;
+	
+	// Make a deep copy of filtered matches
+	HumanReadableMatches = [...FilteredMatches];
+	
+	// Replace player numbers by player names
+	for (let ii=0;  ii<HumanReadableMatches.length; ii++){	
+		for (let jj=1;  jj<HumanReadableMatches[ii].length-1; jj++){
+			if(jj <= PartySize){
+				HumanReadableMatches[ii][jj] = TeamA.Names[HumanReadableMatches[ii][jj]];
+			}
+			else
+			{
+				HumanReadableMatches[ii][jj] = TeamB.Names[HumanReadableMatches[ii][jj]];				
+			}
+		}
+	}
+
+
+	
+	return HumanReadableMatches;
+
 }
 
 
@@ -245,7 +279,32 @@ function compareByLastColumn(a, b) {
 }
 
 
+function generateTableHead(table, data) {
+  let thead = table.createTHead();
+  let row = thead.insertRow();
+  for (let key of data) {
+    let th = document.createElement("th");
+    let text = document.createTextNode(key);
+    th.appendChild(text);
+    row.appendChild(th);
+  }
+}
 
+
+function generateTable(table, data) {
+
+	for (let ii=0;  ii<data.length; ii++){
+		CurRow = data[ii];	
+    	let row = table.insertRow();		
+		for (let jj=0;  jj<CurRow.length; jj++){		
+      		let cell = row.insertCell();
+       		let text = document.createTextNode(CurRow[jj]);    
+        	cell.appendChild(text); 
+        	cell.style.textAlign='center';    		 				
+		}
+		
+	}
+}
 
 
 
