--- a/EqualizeTeamRatings.html
+++ b/EqualizeTeamRatings.html
@@ -6,15 +6,106 @@
 
 <h2>Equalize Team Ratings</h2>
 <p id="WrittenBy">Written by Bernhard Strasser ([o.p.]kanalratte). Version 0.1. Feel free to use or reuse this html & javascript code.</p>
+<br>
+<br>
+<br>
+
+<p id="TeamAInput"><b> <font size="+2">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspNew Player Team A &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspNew Player Team B</font></b></p>
 
 
+<label for="PlayerNameTeamA">Player Name:</label>
+<tab id=t1><input type="text" id="NewPlayerNameTeamA" name="NewPlayerNameTeamA"
+       minlength="1" maxlength="14" size="14">
+<label for="PlayerRatingTeamA">Rating:</label>
+<tab id=t1><input type="number" value="1000" id="NewPlayerRatingTeamA" name="NewPlayerRatingTeamA" required
+       minlength="1" maxlength="4" size="4">
+<button type="button" onclick="AddPlayerTeamA()">Add Player</button>
+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+
+
+<label for="PlayerNameTeamB">Player Name:</label>
+<tab id=t1><input type="text" id="NewPlayerNameTeamB" name="NewPlayerNameTeamB"
+       minlength="1" maxlength="14" size="14">
+
+
+<label for="PlayerRatingTeamB">Rating:</label>
+<tab id=t1><input type="number" value="1000" id="NewPlayerRatingTeamB" name="NewPlayerRatingTeamB" required
+       minlength="1" maxlength="4" size="4">
+<button type="button" onclick="AddPlayerTeamB()">Add Player</button>
+
+
+<br>
+<br>
+<br>
+<br>
+<br>
 <button type="button" onclick="CalcAndShowResults()">Start Calculation...</button>
 
-
+<br>
+<br>
+<br>
 <table>
 </table>
 
 <script>
+
+var TeamA = {Names: [], Ratings: [], PlayerNo: 0};
+var TeamB = {Names: [], Ratings: [], PlayerNo: 0};
+
+
+function AddPlayerTeamA() {
+	var PlayerName = document.getElementById("NewPlayerNameTeamA").value;
+	var PlayerRating = parseInt(document.getElementById("NewPlayerRatingTeamA").value);
+
+	// Default Rating
+	if(isNaN(PlayerRating)){
+		PlayerRating = 1000;
+	}
+
+	// Default Name
+	if(PlayerName == ""){
+		// Search how often default name is already in use
+		NStandardNames = 0;
+		for (let ii=0;  ii<TeamA.PlayerNo; ii++){
+			CurName = TeamA.Names[ii];
+			if(CurName.match(/Name\s*\d+/i) !== null){
+				NStandardNames++;
+			}
+		}
+		PlayerName = "Name " + (NStandardNames+1);
+	}	  
+	  
+	TeamA.Names.push(PlayerName);
+	TeamA.Ratings.push(PlayerRating);
+	TeamA.PlayerNo = TeamA.PlayerNo + 1;
+	   	
+}
+function AddPlayerTeamB() {
+	var PlayerName = document.getElementById("NewPlayerNameTeamB").value;
+	var PlayerRating = parseInt(document.getElementById("NewPlayerRatingTeamB").value);
+
+	// Default Rating
+	if(isNaN(PlayerRating)){
+		PlayerRating = 1000;
+	}
+
+	// Default Name
+	if(PlayerName == ""){
+		// Search how often default name is already in use
+		NStandardNames = 0;
+		for (let ii=0;  ii<TeamB.PlayerNo; ii++){
+			CurName = TeamB.Names[ii];
+			if(CurName.match(/Name\s*\d+/i) !== null){
+				NStandardNames++;
+			}
+		}
+		PlayerName = "Name " + (NStandardNames+1);
+	}	
+
+	TeamB.Names.push(PlayerName);
+	TeamB.Ratings.push(PlayerRating);
+	TeamB.PlayerNo = TeamB.PlayerNo + 1;
+}
 
 
 
@@ -24,8 +115,8 @@ function CalcAndShowResults() {
 	FilterOptions = {MaxRatingDiff:200, TeamA_WantedPlayers:[0, 2], TeamA_UnwantedPlayers:[], TeamB_WantedPlayers:[], TeamB_UnwantedPlayers:[], MaxShownMatches: 100};
 	PartySize = 4;
 	//TeamA = {Names: ["fatman","Drinky","Martinzilla","kanalratte","Frankie","GuentherrDerRinge", "Dietrich"], Ratings: [2100, 1700, 1650, 1500, 1450, 1450, 1350], PlayerNo: [0, 1, 2, 3, 4, 5, 6]};
-	TeamA = {Names: ["fatman","Drinky","Martinzilla","kanalratte"], Ratings: [2100, 1700, 1650, 1500], PlayerNo: 4};
-	TeamB = {Names: ["Mettiu","paviz","Zuccolo","Judd_vp","Canazzo"], Ratings: [1900, 1730, 1900, 1750, 1450], PlayerNo: 5};	
+	//TeamA = {Names: ["fatman","Drinky","Martinzilla","kanalratte"], Ratings: [2100, 1700, 1650, 1500], PlayerNo: 4};
+	//TeamB = {Names: ["Mettiu","paviz","Zuccolo","Judd_vp","Canazzo"], Ratings: [1900, 1730, 1900, 1750, 1450], PlayerNo: 5};	
 
 
 	// Calculate all possible parties for both teams
