--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
 <body>
 
 <h2>Equalize Team Ratings</h2>
-<p id="WrittenBy">Written by Bernhard Strasser ([o.p.]kanalratte). Version 0.1. Feel free to use or reuse this html & javascript code.</p>
+<t1>Written by Bernhard Strasser ([o.p.]kanalratte). Version 0.1. Feel free to use or reuse this html & javascript code.</t1><br>
+<t1>Usage: 1) Define player per match and team, maximum rating difference, and maximum shown matches. 2) Add players to each team.</t1><br>
+<t1>3) Select players who need to play in the next match by left-clicking them.</t1><br>
+<t1>4) Select players who must not play in the next match by right-clicking them. 5) Press "Start Calculation".</t1><br>
 <br>
 <br>
-
+<br>
 <label for="PartySizeText">Players per Match and per Team:</label>
 <tab id=t1><input type="number" value="4" id="PartySize" name="PartySize" required
        minlength="1" maxlength="3" size="3">
@@ -19,6 +22,7 @@
 <label for="MaxShownMatchesText">Maximum Shown Matches:</label>
 <tab id=t1><input type="number" value="100" id="MaxShownMatches" name="MaxShownMatches" required
        minlength="1" maxlength="3" size="3">       
+<br>
 <br>
 <button type="button" onclick="CalcAndShowResults()">Start Calculation...</button>
 <br>
@@ -42,7 +46,15 @@
 			<button type="button" onclick="AddPlayerTeamA()">Add Player</button>
 		</div>
 
+		<div class="addplayer-group">
+			<h2>Players: </h2>
+		</div>
+		
 		<div class="btn-group" id='TeamAPlayersDiv'>	
+		</div>
+		
+		<div class="addplayer-group">
+			<h2>Possible Matches: </h2>
 		</div>
 		
 		<div class="result-table-TeamA">
@@ -69,9 +81,16 @@
 			<button type="button" onclick="AddPlayerTeamB()">Add Player</button>
 		</div>
 
+		<div class="addplayer-group">
+			<h2>Players: </h2>
+		</div>
 		<div class="btn-group" id='TeamBPlayersDiv'>
 		</div>
 		
+		<div class="addplayer-group">
+			<h2>Possible Matches: </h2>
+		</div>
+				
 		<div class="result-table-TeamB">
 			<table id='TeamBResultTable'>
 			</table>		
